# HostHunter

./: .gitignore  LICENSE  README.md  config.ini  hosthunter.py  pyproject.toml  requirements.txt
data/hosts/: duolingo.txt  quipper.txt  ruangguru.txt  webex.txt
docs/: usage.md
hosts/: duolingo.txt  quipper.txt  ruangguru.txt  webex.txt  zoom.txt
output/results/: hosthunter_results_20250813_213828.json  hosthunter_results_20250828_232946.json
results/: hosthunter_results_20250528_054747.txt
src/: cli.py  file_handler.py  host_checker.py  reporter.py  special_checks.py  utils.py
src/HostHunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_file_handler.py  test_host_checker.py  test_special_checks.py  test_utils.py
